--- a/sem-3/Python/demo.ipynb
+++ b/sem-3/Python/demo.ipynb
@@ -20,8 +20,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4c547c96-4d30-4c7b-b6a1-bc1da99a7085",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc 101\n",
+      "xyz 102\n",
+      "pqr 103\n"
+     ]
+    }
+   ],
+   "source": [
+    "s1 = {101:\"abc\",102:\"xyz\",103:\"pqr\"}\n",
+    "for i,j in s1.items():\n",
+    "    temp = i\n",
+    "    i = j\n",
+    "    j = temp\n",
+    "    print(i,j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc754121-06fb-4118-87b1-07857d650ce6",
    "metadata": {},
    "outputs": [],
    "source": []
